backend:http: create swagger specification and handlers skeleton
