# backend/docs/swagger.yaml
@@ -1,8 +1,170 @@
-basePath: /v1
+basePath: /
+definitions:
+  models.AddPackResponse:
+    properties:
+      author:
+        example: author
+        type: string
+      creation_date:
+        example: creation_date
+        type: string
+      name:
+        example: name
+        type: string
+    type: object
+  models.ErrorResponse:
+    properties:
+      error:
+        example: error
+        type: string
+      message:
+        example: message
+        type: string
+    type: object
+  models.PackListRequest:
+    properties:
+      author:
+        example: author
+        type: string
+      max_creation_date:
+        example: 01.01.1970
+        type: string
+      min_creation_date:
+        example: 01.01.1970
+        type: string
+      name:
+        example: name
+        type: string
+      sort_by:
+        enum:
+        - creation_date
+        - downloads_num
+        example: creation_date
+        type: string
+      tags:
+        example:
+        - tags
+        items:
+          type: string
+        type: array
+    type: object
+  models.PackListResponse:
+    properties:
+      packs:
+        items:
+          $ref: '#/definitions/models.PackResponse'
+        type: array
+      packs_num:
+        example: 0
+        type: integer
+    type: object
+  models.PackResponse:
+    properties:
+      author:
+        example: author
+        type: string
+      creation_date:
+        example: creation_date
+        type: string
+      downloads_num:
+        example: 0
+        type: integer
+      file_size:
+        example: 0
+        type: integer
+      name:
+        example: name
+        type: string
+    type: object
 host: localhost:8080
 info:
-  contact: {}
-  title: API for managing question packs for the "SIGame" game
-  version: "1.0"
-paths: {}
+  contact:
+    email: almiluk@gmail.com
+    name: almiluk
+  title: API for managing question packs for the 'SIGame' game
+  version: 0.0.0
+paths:
+  /api/v1/packs:
+    get:
+      consumes:
+      - application/json
+      description: List packs with filters
+      parameters:
+      - description: Filter
+        in: body
+        name: filter
+        required: true
+        schema:
+          $ref: '#/definitions/models.PackListRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.PackListResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: List packs
+      tags:
+      - packs
+    post:
+      consumes:
+      - multipart/form-data
+      description: Add new questions pack
+      parameters:
+      - description: Pack data
+        in: formData
+        name: pack
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.AddPackResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Add pack
+      tags:
+      - packs
+  /packs/{id}:
+    get:
+      description: Download questions pack
+      parameters:
+      - description: Pack ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/octet-stream
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/models.ErrorResponse'
+      summary: Download pack
+      tags:
+      - packs
 swagger: "2.0"
